CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(PRJ_NAME beam)
PROJECT(lib${PRJ_NAME})

# The version number.
SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(VERSION_REVISION 1)

# configure a header file to pass some of the CMake settings
# to the source code
CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/version.h.in"
	"${PROJECT_SOURCE_DIR}/include/${PRJ_NAME}/version.h"
)

INCLUDE_DIRECTORIES(
	include
    src
)

IF(NOT CMAKE_BUILD_TYPE)
    IF(${CMAKE_BINARY_DIR} STREQUAL ${CMAKE_SOURCE_DIR}/release)
        SET(CMAKE_BUILD_TYPE "Release")
	ELSE()
		SET(CMAKE_BUILD_TYPE "Debug")
	ENDIF()
ENDIF()

SET(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra ${CMAKE_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG -g) 
SET(CMAKE_CXX_FLAGS_RELEASE -O2)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test)

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/${PRJ_NAME}
	DESTINATION include
)

# Test
ENABLE_TESTING()
ADD_TEST(NAME "ut" COMMAND ${PRJ_NAME}_test)
