CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(SRCS
	main.cpp
	object_pool_test.cpp
	thread_pool_impl_test.cpp
	wait.cpp
)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/src
	${PROJECT_SOURCE_DIR}/lib/gtest/googlemock/include
)
SET(CMAKE_CXX_FLAGS "-g -Werror -Wall")

# Test
SET(UT_NAME ${PRJ_NAME}_test)
ADD_EXECUTABLE(${UT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${UT_NAME} gmock ${PRJ_NAME})

SET_TARGET_PROPERTIES(${UT_NAME} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)
